--- a/404.html
+++ b/404.html
@@ -6,5 +6,6 @@ layout: master
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
+  <!--TODO add sad bumpel here-->
   <p>The requested page could not be found.</p>
 </div>
